--- a/circleci.yml
+++ b/circleci.yml
@@ -1,21 +1,14 @@
+test:
+  override:
+  - mvn clean
+  - mvn dependency:resolve
+  - mvn test -Dtest=UnitTestSuite
+  - mvn test -Dtest=IntegrationTestSuite
+  post:
+  - mvn clean cobertura:cobertura coveralls:cobertura
+
 machine:
   timezone:
-    America/New_York
-
+    America/Arizona
   java:
-    version: oraclejdk8
-
-dependencies:
-  pre:
-    - sudo rsync -r --include=*/ --include=*.jar --exclude=* .jdk-overlay/jre $JAVA_HOME
-
-general:
-  branches:
-    only:
-      - master
-      - develop
-
-test:
-  post:
-    - mkdir -p $CIRCLE_TEST_REPORTS/junit/
-    - find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+    version: oraclejdk7
