--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,25 @@
-# circle.yml
-...
+machine:
+  timezone:
+    America/Arizona
+
+  java:
+    version: oraclejdk8
+
+dependencies:
+  pre:
+    - sudo rsync -r --include=*/ --include=*.jar --exclude=* .jdk-overlay/jre $JAVA_HOME
+
+general:
+  branches:
+    only:
+      - master
+
+test:
+  post:
+    - mkdir -p $CIRCLE_TEST_REPORTS/junit/
+    - find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+
 
 test:
   override:
     - "true"
-
-...
